Finally fixed the spacing by adding flex

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ img {
 
 .two-columns.last {
     padding: 15px 0;
+    display: flex;
 
 }
 
